--- a/web/vue-imengya-001/index.html
+++ b/web/vue-imengya-001/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>正维IOT</title>
+    <style>
+      html, body {width: 100%; height: 100%; margin: 0px;}
+    </style>
   </head>
   <body>
     <div id="app"></div>
